SONARJAVA-4951 Replace sonar-java specific verifier with analyzer-commons library (#4786)
Use the CheckVerifier provided by the sonar-analyzer-commons testing module instead of the sonar-java-specific implementation to improve testing and allow for better maintanance and updates of the verifier logic.