@@ -75,14 +75,16 @@ public class OSCommandsPath {
   private static final List<String> NULL_INITIALIZED_COMMAND_LIST = null;
 
   public void execString() throws IOException {
-    Runtime.getRuntime().exec(("make"));  // Noncompliant [[sc=32;ec=38]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec("make");  // Noncompliant [[sc=31;ec=37]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec("usr/bin/make");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec("m./ake");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec("m../ake");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec("bin~/make");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec("7:\\\\../ake");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec("SERVER\\make");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(("make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                             ^^^^^^
+    Runtime.getRuntime().exec("make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                            ^^^^^^
+    Runtime.getRuntime().exec("usr/bin/make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec("m./ake"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec("m../ake"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec("bin~/make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec("7:\\\\../ake"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec("SERVER\\make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec("/usr/bin/make");
     Runtime.getRuntime().exec("/usr/bin/make -j8");
     Runtime.getRuntime().exec("../make");
@@ -93,14 +95,15 @@ public class OSCommandsPath {
     Runtime.getRuntime().exec(".\\make");
     Runtime.getRuntime().exec("\\\\SERVER\\make");
 
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND);  // Noncompliant  [[sc=31;ec=52]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_UNIX_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_UNIX_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_UNIX_HOME);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_WINDOWS_ABSOLUTE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_WINDOWS_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_WINDOWS_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_WINDOWS_NETWORK);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                            ^^^^^^^^^^^^^^^^^^^^^
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_UNIX_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_UNIX_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_UNIX_HOME); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_WINDOWS_ABSOLUTE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_WINDOWS_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_WINDOWS_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_WINDOWS_NETWORK); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_UNIX_ABSOLUTE);
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_UNIX_PARENT);
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_UNIX_CURRENT);
@@ -111,29 +114,33 @@ public class OSCommandsPath {
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_WINDOWS_NETWORK);
 
 
-    Runtime.getRuntime().exec("make", ENVIRONMENT);  // Noncompliant [[sc=31;ec=37]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec("make", ENVIRONMENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                            ^^^^^^
     Runtime.getRuntime().exec("/usr/bin/make", ENVIRONMENT);
 
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND, ENVIRONMENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND, ENVIRONMENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_UNIX_ABSOLUTE, ENVIRONMENT);
 
-    Runtime.getRuntime().exec("make", ENVIRONMENT, FILE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec("make", ENVIRONMENT, FILE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec("/usr/bin/make", ENVIRONMENT, FILE);
 
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND, ENVIRONMENT, FILE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND, ENVIRONMENT, FILE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_UNIX_ABSOLUTE, ENVIRONMENT, FILE);
   }
 
   private void execArray() throws IOException {
-    Runtime.getRuntime().exec((new String[]{"make"}));  // Noncompliant [[sc=32;ec=52]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(new String[]{("make")});  // Noncompliant [[sc=31;ec=53]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(new String[]{"make"});  // Noncompliant [[sc=31;ec=51]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(new String[]{"usr/bin/make"});  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(new String[]{"m./ake"});  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(new String[]{"m../ake"});  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(new String[]{"bin~/make"});  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(new String[]{"7:\\\\../ake"});  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(new String[]{"SERVER\\make"});  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec((new String[]{"make"})); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                             ^^^^^^^^^^^^^^^^^^^^
+    Runtime.getRuntime().exec(new String[]{("make")}); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                            ^^^^^^^^^^^^^^^^^^^^^^
+    Runtime.getRuntime().exec(new String[]{"make"}); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                            ^^^^^^^^^^^^^^^^^^^^
+    Runtime.getRuntime().exec(new String[]{"usr/bin/make"}); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(new String[]{"m./ake"}); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(new String[]{"m../ake"}); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(new String[]{"bin~/make"}); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(new String[]{"7:\\\\../ake"}); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(new String[]{"SERVER\\make"}); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec(new String[]{});
     Runtime.getRuntime().exec(new String[]{"/usr/bin/make"});
     Runtime.getRuntime().exec(new String[]{"/usr/bin/make", "-j8"});
@@ -147,14 +154,14 @@ public class OSCommandsPath {
     Runtime.getRuntime().exec(new String[]{File.pathSeparator});
 
 
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_UNIX_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_UNIX_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_UNIX_HOME);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_ABSOLUTE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_NETWORK);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_UNIX_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_UNIX_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_UNIX_HOME); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_ABSOLUTE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_NETWORK); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_ARRAY_EMPTY);
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_ARRAY);
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_ARRAY_UNIX_PARENT);
@@ -166,27 +173,31 @@ public class OSCommandsPath {
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_ARRAY_WINDOWS_NETWORK);
 
     String[] nonCompliantCommandArray = new String[]{"make"};
-    Runtime.getRuntime().exec(nonCompliantCommandArray); // Noncompliant [[sc=31;ec=55]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(nonCompliantCommandArray); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                            ^^^^^^^^^^^^^^^^^^^^^^^^
     String[] compliantCommandArray = new String[]{"/usr/bin/make"};
     Runtime.getRuntime().exec(compliantCommandArray);
 
 
-    Runtime.getRuntime().exec(new String[]{"make"}, ENVIRONMENT);  // Noncompliant [[sc=31;ec=51]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(new String[]{"make"}, ENVIRONMENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                            ^^^^^^^^^^^^^^^^^^^^
     Runtime.getRuntime().exec(new String[]{"/usr/bin/make"}, ENVIRONMENT);
 
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY, ENVIRONMENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY, ENVIRONMENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_ARRAY, ENVIRONMENT); // Compliant FN Cannot read from non-final variables
 
-    Runtime.getRuntime().exec(nonCompliantCommandArray, ENVIRONMENT); // Noncompliant [[sc=31;ec=55]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(nonCompliantCommandArray, ENVIRONMENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                            ^^^^^^^^^^^^^^^^^^^^^^^^
     Runtime.getRuntime().exec(compliantCommandArray, ENVIRONMENT);
 
-    Runtime.getRuntime().exec(new String[]{"make"}, ENVIRONMENT, FILE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(new String[]{"make"}, ENVIRONMENT, FILE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec(new String[]{"/usr/bin/make"}, ENVIRONMENT, FILE);
 
-    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY, ENVIRONMENT, FILE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(NON_COMPLIANT_COMMAND_ARRAY, ENVIRONMENT, FILE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     Runtime.getRuntime().exec(COMPLIANT_COMMAND_ARRAY, ENVIRONMENT, FILE); // Compliant FN Cannot read from non-final variables
 
-    Runtime.getRuntime().exec(nonCompliantCommandArray, ENVIRONMENT, FILE); // Noncompliant [[sc=31;ec=55]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    Runtime.getRuntime().exec(nonCompliantCommandArray, ENVIRONMENT, FILE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                            ^^^^^^^^^^^^^^^^^^^^^^^^
     Runtime.getRuntime().exec(compliantCommandArray, ENVIRONMENT, FILE);
   }
 
@@ -194,14 +205,16 @@ public class OSCommandsPath {
     ProcessBuilder builder = new ProcessBuilder();
     builder.command();
 
-    builder.command(("make"));  // Noncompliant [[sc=22;ec=28]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command("make");  // Noncompliant [[sc=21;ec=27]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command("usr/bin/make");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command("m./ake");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command("m../ake");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command("bin~/make");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command("7:\\\\../ake");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command("SERVER\\make");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(("make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                   ^^^^^^
+    builder.command("make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                  ^^^^^^
+    builder.command("usr/bin/make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command("m./ake"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command("m../ake"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command("bin~/make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command("7:\\\\../ake"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command("SERVER\\make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     builder.command("/usr/bin/make");
     builder.command("/usr/bin/make -j8");
     builder.command("/usr/bin/make", "-j8");
@@ -213,14 +226,15 @@ public class OSCommandsPath {
     builder.command(".\\make");
     builder.command("\\\\SERVER\\make");
 
-    builder.command(NON_COMPLIANT_COMMAND_ARRAY);  // Noncompliant [[sc=21;ec=48]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_ARRAY_UNIX_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_ARRAY_UNIX_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_ARRAY_UNIX_HOME);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_ABSOLUTE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_NETWORK);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_ARRAY); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
+    builder.command(NON_COMPLIANT_COMMAND_ARRAY_UNIX_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_ARRAY_UNIX_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_ARRAY_UNIX_HOME); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_ABSOLUTE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_ARRAY_WINDOWS_NETWORK); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     builder.command(COMPLIANT_COMMAND_ARRAY_EMPTY);
     builder.command(COMPLIANT_COMMAND_ARRAY);
     builder.command(COMPLIANT_COMMAND_ARRAY_UNIX_PARENT);
@@ -234,16 +248,19 @@ public class OSCommandsPath {
 
   private void commandList() {
     ProcessBuilder builder = new ProcessBuilder();
-    builder.command((Arrays.asList("make")));  // Noncompliant [[sc=22;ec=43]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Arrays.asList(("make")));  // Noncompliant [[sc=21;ec=44]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Arrays.asList("make"));  // Noncompliant [[sc=21;ec=42]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Arrays.asList("m../ake"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Arrays.asList("mak./e"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Arrays.asList("bin~/make"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Arrays.asList("7:\\\\make"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Arrays.asList("m..\\ake"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Arrays.asList("ma.\\ke"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Arrays.asList("SERVER\\make"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command((Arrays.asList("make"))); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                   ^^^^^^^^^^^^^^^^^^^^^
+    builder.command(Arrays.asList(("make"))); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                  ^^^^^^^^^^^^^^^^^^^^^^^
+    builder.command(Arrays.asList("make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                  ^^^^^^^^^^^^^^^^^^^^^
+    builder.command(Arrays.asList("m../ake")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Arrays.asList("mak./e")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Arrays.asList("bin~/make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Arrays.asList("7:\\\\make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Arrays.asList("m..\\ake")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Arrays.asList("ma.\\ke")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Arrays.asList("SERVER\\make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     builder.command(Arrays.asList("/usr/bin/make"));
     builder.command(Arrays.asList("/usr/bin/make -j8"));
     builder.command(Arrays.asList("/usr/bin/make", "-j8"));
@@ -255,15 +272,15 @@ public class OSCommandsPath {
     builder.command(Arrays.asList(".\\make"));
     builder.command(Arrays.asList("\\\\SERVER\\make"));
 
-    builder.command(NON_COMPLIANT_COMMAND_LIST);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_LIST_UNIX_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_LIST_UNIX_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_LIST_UNIX_HOME);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_LIST_WINDOWS_ABSOLUTE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_LIST_WINDOWS_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_LIST_WINDOWS_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_LIST_WINDOWS_NETWORK);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(NON_COMPLIANT_COMMAND_LIST_VARIABLE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_LIST); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_LIST_UNIX_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_LIST_UNIX_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_LIST_UNIX_HOME); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_LIST_WINDOWS_ABSOLUTE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_LIST_WINDOWS_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_LIST_WINDOWS_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_LIST_WINDOWS_NETWORK); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(NON_COMPLIANT_COMMAND_LIST_VARIABLE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     builder.command(COMPLIANT_COMMAND_LIST_UNIX);
     builder.command(COMPLIANT_COMMAND_LIST_UNIX_PARENT);
     builder.command(COMPLIANT_COMMAND_LIST_UNIX_CURRENT);
@@ -273,14 +290,15 @@ public class OSCommandsPath {
     builder.command(COMPLIANT_COMMAND_LIST_WINDOWS_CURRENT);
     builder.command(COMPLIANT_COMMAND_LIST_WINDOWS_NETWORK);
 
-    builder.command(Collections.singletonList("make"));  // Noncompliant [[sc=21;ec=54]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Collections.singletonList("m../ake"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Collections.singletonList("mak./e"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Collections.singletonList("bin~/make"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Collections.singletonList("7:\\\\make"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Collections.singletonList("m..\\ake"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Collections.singletonList("ma.\\ke"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    builder.command(Collections.singletonList("SERVER\\make"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Collections.singletonList("make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+    builder.command(Collections.singletonList("m../ake")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Collections.singletonList("mak./e")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Collections.singletonList("bin~/make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Collections.singletonList("7:\\\\make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Collections.singletonList("m..\\ake")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Collections.singletonList("ma.\\ke")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    builder.command(Collections.singletonList("SERVER\\make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     builder.command(Collections.singletonList("/usr/bin/make"));
     builder.command(Collections.singletonList("/usr/bin/make -j8"));
     builder.command(Collections.singletonList("../make"));
@@ -293,15 +311,17 @@ public class OSCommandsPath {
   }
 
   private void processBuilder() {
-    new ProcessBuilder(("make"));  // Noncompliant [[sc=25;ec=31]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder("make");  // Noncompliant [[sc=24;ec=30]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder("m../ake");   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder("mak./e");   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder("bin~/make");   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder("7:\\\\make");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder("m..\\ake");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder("ma.\\ke");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder("SERVER\\make");  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(("make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                      ^^^^^^
+    new ProcessBuilder("make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                     ^^^^^^
+    new ProcessBuilder("m../ake"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder("mak./e"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder("bin~/make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder("7:\\\\make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder("m..\\ake"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder("ma.\\ke"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder("SERVER\\make"); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     new ProcessBuilder("/usr/bin/make");
     new ProcessBuilder("/usr/bin/make -j8");
     new ProcessBuilder("/usr/bin/make", "-j8");
@@ -313,14 +333,15 @@ public class OSCommandsPath {
     new ProcessBuilder(".\\make");
     new ProcessBuilder("\\\\SERVER\\make");
 
-    new ProcessBuilder(NON_COMPLIANT_COMMAND);  // Noncompliant [[sc=24;ec=45]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_UNIX_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_UNIX_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_UNIX_HOME);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_WINDOWS_ABSOLUTE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_WINDOWS_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_WINDOWS_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_WINDOWS_NETWORK);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                     ^^^^^^^^^^^^^^^^^^^^^
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_UNIX_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_UNIX_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_UNIX_HOME); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_WINDOWS_ABSOLUTE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_WINDOWS_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_WINDOWS_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_WINDOWS_NETWORK); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     new ProcessBuilder(COMPLIANT_COMMAND_UNIX_ABSOLUTE);
     new ProcessBuilder(COMPLIANT_COMMAND_UNIX_PARENT);
     new ProcessBuilder(COMPLIANT_COMMAND_UNIX_CURRENT);
@@ -332,16 +353,19 @@ public class OSCommandsPath {
   }
 
   private void processBuilderList() {
-    new ProcessBuilder((Arrays.asList("make")));  // Noncompliant [[sc=25;ec=46]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Arrays.asList(("make")));  // Noncompliant [[sc=24;ec=47]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Arrays.asList("make"));  // Noncompliant [[sc=24;ec=45]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Arrays.asList("m../ake"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Arrays.asList("mak./e"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Arrays.asList("bin~/make"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Arrays.asList("7:\\\\make"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Arrays.asList("m..\\ake"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Arrays.asList("ma.\\ke"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Arrays.asList("SERVER\\make"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder((Arrays.asList("make"))); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                      ^^^^^^^^^^^^^^^^^^^^^
+    new ProcessBuilder(Arrays.asList(("make"))); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                     ^^^^^^^^^^^^^^^^^^^^^^^
+    new ProcessBuilder(Arrays.asList("make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                     ^^^^^^^^^^^^^^^^^^^^^
+    new ProcessBuilder(Arrays.asList("m../ake")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Arrays.asList("mak./e")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Arrays.asList("bin~/make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Arrays.asList("7:\\\\make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Arrays.asList("m..\\ake")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Arrays.asList("ma.\\ke")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Arrays.asList("SERVER\\make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     new ProcessBuilder(Arrays.asList());
     new ProcessBuilder(Arrays.asList("/usr/bin/make"));
     new ProcessBuilder(Arrays.asList("/usr/bin/make -j8"));
@@ -354,15 +378,16 @@ public class OSCommandsPath {
     new ProcessBuilder(Arrays.asList(".\\make"));
     new ProcessBuilder(Arrays.asList("\\\\SERVER\\make"));
 
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST);  // Noncompliant [[sc=24;ec=50]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_UNIX_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_UNIX_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_UNIX_HOME);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_WINDOWS_ABSOLUTE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_WINDOWS_PARENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_WINDOWS_CURRENT);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_WINDOWS_NETWORK);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_VARIABLE);  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_UNIX_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_UNIX_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_UNIX_HOME); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_WINDOWS_ABSOLUTE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_WINDOWS_PARENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_WINDOWS_CURRENT); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_WINDOWS_NETWORK); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(NON_COMPLIANT_COMMAND_LIST_VARIABLE); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     new ProcessBuilder(COMPLIANT_COMMAND_LIST_UNIX);
     new ProcessBuilder(COMPLIANT_COMMAND_LIST_UNIX_PARENT);
     new ProcessBuilder(COMPLIANT_COMMAND_LIST_UNIX_CURRENT);
@@ -372,14 +397,15 @@ public class OSCommandsPath {
     new ProcessBuilder(COMPLIANT_COMMAND_LIST_WINDOWS_CURRENT);
     new ProcessBuilder(COMPLIANT_COMMAND_LIST_WINDOWS_NETWORK);
 
-    new ProcessBuilder(Collections.singletonList("make"));  // Noncompliant [[sc=24;ec=57]] {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Collections.singletonList("m../ake"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Collections.singletonList("mak./e"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Collections.singletonList("bin~/make"));   // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Collections.singletonList("7:\\\\make"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Collections.singletonList("m..\\ake"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Collections.singletonList("ma.\\ke"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
-    new ProcessBuilder(Collections.singletonList("SERVER\\make"));  // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Collections.singletonList("make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+//                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+    new ProcessBuilder(Collections.singletonList("m../ake")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Collections.singletonList("mak./e")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Collections.singletonList("bin~/make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Collections.singletonList("7:\\\\make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Collections.singletonList("m..\\ake")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Collections.singletonList("ma.\\ke")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
+    new ProcessBuilder(Collections.singletonList("SERVER\\make")); // Noncompliant {{Make sure the "PATH" used to find this command includes only what you intend.}}
     new ProcessBuilder(Collections.singletonList("/usr/bin/make"));
     new ProcessBuilder(Collections.singletonList("/usr/bin/make -j8"));
     new ProcessBuilder(Collections.singletonList("../make"));
